force-app/main/default/objects/Cleanliness_and_Preset__c/Cleanliness_and_Preset__c.object-meta.xml
<CustomObject>
    <label>Cleanliness and Preset</label>
    <nameField>
        <displayFormat>CP-{0000000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cleanliness and Presets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>