force-app/main/default/objects/Cleanliness_and_Preset__c/fields/Cleanliness_Preset__c.field-meta.xml
<CustomField>
    <fullName>Cleanliness_Preset__c</fullName>
    <label>Cleanliness/Preset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleanliness</fullName>
            </value>
            <value>
                <fullName>Preset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>