force-app/main/default/objects/Cleanliness_and_Preset__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>