force-app/main/default/objects/Cleanliness_and_Preset__c/fields/Quantity_by_Class__c.field-meta.xml
<CustomField>
    <fullName>Quantity_by_Class__c</fullName>
    <label>Quantity(by Class)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>