force-app/main/default/objects/Cleanliness_and_Preset__c/fields/Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Sub_type__c</fullName>
    <label>Sub-type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Headset</fullName>
            </value>
            <value>
                <fullName>Head Cover</fullName>
            </value>
            <value>
                <fullName>Seat Cover</fullName>
            </value>
            <value>
                <fullName>Pillow</fullName>
            </value>
            <value>
                <fullName>Blanket</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Window</fullName>
            </value>
            <value>
                <fullName>OHSC</fullName>
            </value>
            <value>
                <fullName>Carpet</fullName>
            </value>
            <value>
                <fullName>Safety Instruction Card</fullName>
            </value>
            <value>
                <fullName>Exit Seat Information Card</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Duty Free Magazine</fullName>
            </value>
            <value>
                <fullName>Disposable Bag</fullName>
            </value>
            <value>
                <fullName>Slipper</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>G1</fullName>
            </value>
            <value>
                <fullName>G2</fullName>
            </value>
            <value>
                <fullName>G5</fullName>
            </value>
            <value>
                <fullName>L11</fullName>
            </value>
            <value>
                <fullName>L33</fullName>
            </value>
            <value>
                <fullName>L34</fullName>
            </value>
            <value>
                <fullName>L36</fullName>
            </value>
            <value>
                <fullName>L53</fullName>
            </value>
            <value>
                <fullName>L54</fullName>
            </value>
            <value>
                <fullName>L61</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>