force-app/main/default/objects/Cleanliness_and_Preset__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cleanliness_Preset__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cabin</fullName>
            </value>
            <value>
                <fullName>Lavatory</fullName>
            </value>
            <value>
                <fullName>Galley</fullName>
            </value>
            <value>
                <fullName>Cockpit</fullName>
            </value>
            <value>
                <fullName>Toilet Amenity</fullName>
            </value>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Gallery</fullName>
                <isActive>false</isActive>
                <label>Gallery</label>
            </value>
            <value>
                <fullName>Waste Bin</fullName>
                <isActive>false</isActive>
                <label>Waste Bin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>